# vtapi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README  README.md  README.txt  VTApi.h  autogen.sh  build_debug.sh  build_debug_opencv3.sh  build_release.sh  cli_insert.cpp  cli_settings.cpp  cli_settings.h  commons.cpp  commons.h  compile_interfaces.sh  configure.ac  configure.in  dataset.cpp  default.conf  doxygen.conf  insert.cpp  interval.cpp  keyvalues.cpp  ltmain.patch  main.cpp  make.sh  method.cpp  methodkeys.cpp  process.cpp  query.cpp  run_vtserver_debug.sh  samples.cpp  select.cpp  sequence.cpp  setwinconfig.sh  test.cpp  (+12 more)
doc/: Doxyfile  Doxyfile.in  DoxygenLayout.xml  LICENCE.txt  LICENSE.txt  MAINPAGE.txt.in  Makefile.am  SAMPLES.txt  SAMPLES.txt.in  VTCLI.txt  license.txt
docker/: Dockerfile  README.md
example/: README  launcher.cpp  make_all.sh  modules.xml  vtapi.conf
example/mod_demo1/: mod_demo1.cpp
example/mod_demo2/: mod_demo2.cpp
example/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
example/sql/: demo-schema.sql  reset-schema.sh
include/: Makefile.am  vtapi.h  vtapi_backends.h  vtapi_commons.h  vtapi_config.h  vtapi_data.h  vtapi_global.h  vtapi_libpq.h  vtapi_queries.h  vtapi_settings.h  vtcli.h
include/backends/: vtapi_backendbase.h  vtapi_backendfactory.h  vtapi_backendinterfaces.h  vtapi_backendlibs.h  vtapi_backends.h  vtapi_connection.h  vtapi_libloader.h  vtapi_querybuilder.h  vtapi_resultset.h  vtapi_typemanager.h
include/common/: vtapi_autoconfig.h  vtapi_autoconfig.h.in  vtapi_baseparams.h  vtapi_compat.h  vtapi_config.h  vtapi_config2.h  vtapi_defs.h  vtapi_errcodes.h  vtapi_global.h  vtapi_logger.h  vtapi_misc.h  vtapi_serialize.h  vtapi_settings.h  vtapi_timexer.h  vtapi_tkey.h  vtapi_tkeyvalue.h  vtapi_types.h
include/data/: vtapi_commons.h  vtapi_data.h  vtapi_dataset.h  vtapi_interval.h  vtapi_intervalevent.h  vtapi_keyvalues.h  vtapi_method.h  vtapi_methodkeys.h  vtapi_methodparams.h  vtapi_process.h  vtapi_processcontrol.h  vtapi_processparams.h  vtapi_processstate.h  vtapi_sequence.h  vtapi_task.h  vtapi_taskparams.h
include/modules/: vtapi_methodinterface.h
include/postgresql/: libpqtypes.h  vt-print.h
include/queries/: vtapi_insert.h  vtapi_queries.h  vtapi_query.h  vtapi_select.h  vtapi_update.h
include/vtapi/: vtapi.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-Windows.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-Windows.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
nbproject_win/: Makefile-Debug.mk  Makefile-Release.mk
postgres/: createdb.sql  createschema.sql  postgis_config.h
postgresql/: libpqtypes.h  pg_type.h  vt-print.c  vt-print.h
pyclient/: setup.py
pyi/: Jamroot  boost-build.jam  exposed_decl.pypp.txt  makePyI.py  makePyI.sh  vtapi.py  vtapi_load.py  vtapi_test.py
sqlite/: create_dataset.sql  create_dataset.sql~  create_public.sql  createdb.sql~  createschema.sql~  drop_dataset.sql  uninstall.sh  vtapi_public.db  vtapi_vidte.db
src/: CMakeLists.txt  Makefile  Makefile.am  backend_factory.cpp  backend_pg.cpp  backend_sl.cpp  commons.cpp  compat.cpp  dataset.cpp  defs.cpp  interproc.cpp  interval.cpp  intervalevent.cpp  intervaloutput.cpp  keyvalues.cpp  logger.cpp  main.cpp  method.cpp  process.cpp  processcontrol.cpp  processparams.cpp  processstate.cpp  query.cpp  sequence.cpp  task.cpp  taskparams.cpp  taskprogress.cpp  timexer.cpp  tkey.cpp  typemap.cpp  video.cpp  vt-print.c  vtapi.cpp  vtapi.ggo  vtapi_libpq.c  vtapi_misc.c  vtapi_misc.cpp  vtapi_settings.cpp
src/backend_pg/: pgbackendbase.cpp  pgconnection.cpp  pglibloader.cpp  pgquerybuilder.cpp  pgresultset.cpp  pgtypemanager.cpp
src/backend_sl/: slbackendbase.cpp  slconnection.cpp  sllibloader.cpp  slquerybuilder.cpp  slresultset.cpp  sltypemanager.cpp
src/backends/postgresql/: CMakeLists.txt  pg_backend.cpp  pg_backend.h  pg_connection.cpp  pg_connection.h  pg_querybuilder.cpp  pg_querybuilder.h  pg_resultset.cpp  pg_resultset.h  pg_types.h
src/backends/sqlite/: CMakeLists.txt  sl_backend.cpp  sl_backend.h  sl_connection.cpp  sl_connection.h  sl_querybuilder.cpp  sl_querybuilder.h  sl_resultset.cpp  sl_resultset.h
src/modules/: demo_modules.xml
src/modules/demo1/: CMakeLists.txt  demo1.cpp  demo1.h
src/modules/demo2/: CMakeLists.txt  demo2.cpp  demo2.h
src/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-Windows.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-Windows.bash  configurations.xml  project.xml
src/nbproject/private/: configurations.xml
src/vtapi/: CMakeLists.txt  commons.cpp  compat.cpp  dataset.cpp  defs.cpp  interval.cpp  intervaloutput.cpp  method.cpp  process.cpp  sequence.cpp  task.cpp  taskparams.cpp  taskprogress.cpp  utils.cpp
src/vtapi_backends/: CMakeLists.txt
src/vtapi_backends/postgresql/: CMakeLists.txt  pg_backend.h  pg_connection.cpp  pg_connection.h  pg_querybuilder.cpp  pg_querybuilder.h  pg_resultset.cpp  pg_resultset.h  pg_types.h
src/vtapi_backends/sqlite/: CMakeLists.txt  sl_backend.cpp  sl_connection.cpp  sl_connection.h  sl_querybuilder.cpp  sl_querybuilder.h  sl_resultset.cpp  sl_resultset.h
src/vtapi_modules/: CMakeLists.txt
src/vtapi_modules/demo/: CMakeLists.txt  demo.cpp  demo.h
src/vtapi_modules/demo1/: CMakeLists.txt  demo1.cpp  demo1.h
src/vtapi_modules/demo2/: CMakeLists.txt  demo2.cpp
src/vtcli/: CMakeLists.txt  vtcli.cpp  vtcli.h
src/vtmodule/: CMakeLists.txt  vtmodule.cpp  vtmodule.h
src/vtserver/: .gitignore  CMakeLists.txt  interproc.cpp  interproc.h  sequencestats.cpp  sequencestats.h  videostats.cpp  videostats.h  vtserver.cpp  vtserver.h  vtserver_interface.proto  worker.cpp  worker.h
src/vtserver/python/: client.py  client_vt.py  fake_server.py  setup.py
test/: test.cpp
vagrant+docker/: README.md  Vagrantfile  bootstrap.sh
(+194 files in other folders)
